--- a/frontend/index.html
+++ b/frontend/index.html
@@ -277,7 +277,7 @@
         });
 
         // === APPLICATION SCRIPT (sama seperti sebelumnya) ===
-        const API_BASE = 'http://localhost:3000/api';
+        const API_BASE = 'syncjadwalbima-production.up.railway.app';
         let sessionId = null;
         let parsedCourses = [];
 
