--- a/frontend/index.html
+++ b/frontend/index.html
@@ -277,7 +277,7 @@
         });
 
         // === APPLICATION SCRIPT (sama seperti sebelumnya) ===
-        const API_BASE = 'syncjadwalbima-production.up.railway.app';
+        const API_BASE = 'https://syncjadwalbima-production.up.railway.app/api';
         let sessionId = null;
         let parsedCourses = [];
 
