--- a/frontend/instructions.html
+++ b/frontend/instructions.html
@@ -33,7 +33,7 @@
 
             <section class="step">
                 <div class="step-title"><span class="step-number">2</span>Salin dan Tempel Jadwal</div>
-                <p>Buka portal akademik BIMA Anda dan buka halaman jadwal kuliah. Salin seluruh tabel jadwal dengan cara menyeleksi (highlight) semua teks dari header kolom "Kurikulum" hingga baris mata kuliah terakhir, seperti pada gambar di bawah ini:</p>
+                <p>Buka portal akademik <a href="https://bima.upnyk.ac.id">BIMA</a> Anda dan buka halaman jadwal kuliah. Salin seluruh tabel jadwal dengan cara menyeleksi (highlight) semua teks dari header kolom "Kurikulum" hingga baris mata kuliah terakhir, seperti pada gambar di bawah ini:</p>
                 
                 <img src="assets/bima-schedule-example.png" alt="Contoh menyeleksi jadwal di BIMA" class="instruction-image">
 
