--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,7 +56,9 @@
             <div id="statusMessage" class="hidden"></div>
         </main>
     </div>
-
+    <footer class="footer">
+    <a href="/privacy.html" target="_blank" rel="noopener noreferrer">Privacy Policy</a>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
