--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,7 +57,7 @@
         </main>
     </div>
     <footer class="footer">
-    <a href="/privacy.html" target="_blank" rel="noopener noreferrer">Privacy Policy</a>
+    <a href="privacy.html" target="_blank" rel="noopener noreferrer">Privacy Policy</a>
     </footer>
     <script src="script.js"></script>
 </body>
