--- a/frontend/privacy.html
+++ b/frontend/privacy.html
@@ -23,7 +23,7 @@
         <h2>4. Compliance with Google Policies</h2>
         <p>SyncJadwal's use and transfer of information received from Google APIs will adhere to the <a href="https://developers.google.com/terms/api-services-user-data-policy" target="_blank">Google API Services User Data Policy</a>, including the Limited Use requirements.</p>
         <h2>5. Contact Us</h2>
-        <p>If you have any questions, please contact the developer at: <strong>[GANTI DENGAN EMAIL-MU]</strong></p>
+        <p>If you have any questions, please contact the developer at: <strong>tophvly1@gmail.com</strong></p>
     </div>
 </body>
 </html>
