--- a/frontend/instructions.html
+++ b/frontend/instructions.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="h43V0d6sye27ecNhiVMO5qKUhEQOlH2vgE_o7sP1e0s" />
     <title>Cara Penggunaan - SyncJadwal</title>
     <link rel="stylesheet" href="style.css">
 </head>
