--- a/frontend/privacy.html
+++ b/frontend/privacy.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="h43V0d6sye27ecNhiVMO5qKUhEQOlH2vgE_o7sP1e0s" />
     <title>Privacy Policy - SyncJadwal</title>
     <style>
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; line-height: 1.6; max-width: 800px; margin: 20px auto; padding: 0 20px; color: #333; }
