--- a/frontend/instructions.html
+++ b/frontend/instructions.html
@@ -73,7 +73,7 @@ Ansi Nurkholis S.Kom., M.Kom.
                 <p>Jika semua sudah benar, klik tombol <strong>"Sinkronkan ke Google Calendar"</strong>. Tunggu beberapa saat, dan semua jadwal mata kuliah Anda akan otomatis masuk ke kalender!</p>
             </section>
 
-            <a href="index.html" class="button" style="text-align: center; text-decoration: none; display: block; margin-top: 24px;">Kembali ke Halaman Utama</a>
+            <a href="sync.html" class="button" style="text-align: center; text-decoration: none; display: block; margin-top: 24px;">Mulai Sinkronisasi</a>
         </main>
     </div>
     <script>
