--- a/frontend/sync.html
+++ b/frontend/sync.html
@@ -53,7 +53,7 @@
         <header class="app-header">
             <h1>Aplikasi SyncJadwal</h1>
             <p>Ikuti 3 langkah di bawah ini untuk menyinkronkan jadwalmu.</p>
-            <a href="/" class="back-link">&larr; Kembali ke Halaman Utama & Instruksi</a>
+            <a href="instructions.html" class="back-link">&larr; Lihat Tutorial Penggunaan</a>
         </header>
 
         <main>
