--- a/frontend/sync.html
+++ b/frontend/sync.html
@@ -83,7 +83,7 @@
 
     <script>
         // KODE JAVASCRIPT LENGKAP (TIDAK BERUBAH DARI SEBELUMNYA)
-        const API_BASE = 'https://syncjadwalbima-production.up.railway.app/api';
+        const API_BASE = '/api';
         let sessionId = null;
         let parsedCourses = [];
 
