--- a/frontend/instructions.html
+++ b/frontend/instructions.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="h43V0d6sye27ecNhiVMO5qKUhEQOlH2vgE_o7sP1e0s" />
-    <title>Cara Penggunaan - SyncJadwal</title>
+    <title>Cara Penggunaan - BimCalendar</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -77,7 +77,6 @@ Ansi Nurkholis S.Kom., M.Kom.
         </main>
     </div>
     <script>
-        // Skrip minimalis hanya untuk theme toggle di halaman ini
         const themeToggle = document.getElementById('theme-toggle');
         const sunIcon = document.getElementById('theme-icon-sun');
         const moonIcon = document.getElementById('theme-icon-moon');
