--- a/frontend/privacy.html
+++ b/frontend/privacy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="h43V0d6sye27ecNhiVMO5qKUhEQOlH2vgE_o7sP1e0s" />
-    <title>Privacy Policy - SyncJadwal</title>
+    <title>Privacy Policy - BimCalendar</title>
     <style>
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; line-height: 1.6; max-width: 800px; margin: 20px auto; padding: 0 20px; color: #333; }
         .container { padding: 20px; border: 1px solid #ddd; border-radius: 8px; background-color: #f9f9f9; }
@@ -13,16 +13,16 @@
 </head>
 <body>
     <div class="container">
-        <h1>Privacy Policy for SyncJadwal</h1>
+        <h1>Privacy Policy for BimCalendar</h1>
         <p><strong>Last Updated:</strong> October 17, 2025</p>
         <h2>1. Introduction</h2>
-        <p>Welcome to SyncJadwal ("the Application"). This web application is designed to help students of UPN "Veteran" Yogyakarta synchronize their class schedules from the BIMA academic portal directly to their personal Google Calendar.</p>
+        <p>Welcome to BimCalendar ("the Application"). This web application is designed to help students of UPN "Veteran" Yogyakarta synchronize their class schedules from the BIMA academic portal directly to their personal Google Calendar.</p>
         <h2>2. Information We Access</h2>
         <p>When you grant access, our Application interacts with your Google Account to use the following Google API Scope: <strong>https://www.googleapis.com/auth/calendar</strong>. This permission allows the Application to create new calendar events (your class schedules) on your primary Google Calendar.</p>
         <h2>3. How We Use Your Information</h2>
         <p>Your Google user data is used exclusively for creating calendar events based on the schedule data you provide. We do not read, store, share, or sell your data for any other purpose.</p>
         <h2>4. Compliance with Google Policies</h2>
-        <p>SyncJadwal's use and transfer of information received from Google APIs will adhere to the <a href="https://developers.google.com/terms/api-services-user-data-policy" target="_blank">Google API Services User Data Policy</a>, including the Limited Use requirements.</p>
+        <p>BimCalendar's use and transfer of information received from Google APIs will adhere to the <a href="https://developers.google.com/terms/api-services-user-data-policy" target="_blank">Google API Services User Data Policy</a>, including the Limited Use requirements.</p>
         <h2>5. Contact Us</h2>
         <p>If you have any questions, please contact the developer at: <strong>tophvly1@gmail.com</strong></p>
     </div>
