--- a/frontend/sync.html
+++ b/frontend/sync.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mulai Sinkronisasi - SyncJadwal</title>
+    <title>Mulai Sinkronisasi - BimCalendar</title>
     <style>
         :root {
             --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
@@ -19,7 +19,6 @@
         .app-header h1 { font-size: 2.5rem; font-weight: 700; }
         .app-header p { color: var(--c-text-secondary); margin-top: 8px; }
         
-        /* TOMBOL KEMBALI (BARU) */
         .back-link {
             display: inline-block;
             margin-top: 24px;
@@ -51,7 +50,7 @@
 <body>
     <div class="container">
         <header class="app-header">
-            <h1>Aplikasi SyncJadwal</h1>
+            <h1>BimCalendar</h1>
             <p>Ikuti 3 langkah di bawah ini untuk menyinkronkan jadwalmu.</p>
             <a href="instructions.html" class="back-link">&larr; Lihat Tutorial Penggunaan</a>
         </header>
@@ -82,7 +81,7 @@
     </div>
 
     <script>
-        // KODE JAVASCRIPT LENGKAP (TIDAK BERUBAH DARI SEBELUMNYA)
+        // SCRIPT JALAN NORMAL (Hanya pastikan API_BASE benar sesuai yg kita fix sebelumnya)
         const API_BASE = '/api';
         let sessionId = null;
         let parsedCourses = [];
