--- a/frontend/sync.html
+++ b/frontend/sync.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,18 +8,55 @@
     <style>
         :root {
             --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            --radius: 12px; --shadow: 0 4px 6px -1px rgba(0,0,0,0.1), 0 2px 4px -2px rgba(0,0,0,0.1);
-            --c-bg: #f8f9fa; --c-surface: #ffffff; --c-text-primary: #212529; --c-text-secondary: #6c757d;
-            --c-border: #dee2e6; --c-primary: #4f46e5; --c-primary-hover: #4338ca; --c-success: #198754;
-            --c-success-bg: #d1e7dd; --c-error: #dc3545; --c-error-bg: #f8d7da;
+            --radius: 12px;
+            --shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
+            --c-bg: #f8f9fa;
+            --c-surface: #ffffff;
+            --c-text-primary: #212529;
+            --c-text-secondary: #6c757d;
+            --c-border: #dee2e6;
+            --c-primary: #4f46e5;
+            --c-primary-hover: #4338ca;
+            --c-success: #198754;
+            --c-success-bg: #d1e7dd;
+            --c-error: #dc3545;
+            --c-error-bg: #f8d7da;
         }
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: var(--font-family); background-color: var(--c-bg); color: var(--c-text-primary); }
-        .container { max-width: 800px; margin: 0 auto; padding: 40px 24px; }
-        .app-header { text-align: center; margin-bottom: 40px; position: relative; }
-        .app-header h1 { font-size: 2.5rem; font-weight: 700; }
-        .app-header p { color: var(--c-text-secondary); margin-top: 8px; }
-        
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: var(--font-family);
+            background-color: var(--c-bg);
+            color: var(--c-text-primary);
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 40px 24px;
+        }
+
+        .app-header {
+            text-align: center;
+            margin-bottom: 40px;
+            position: relative;
+        }
+
+        .app-header h1 {
+            font-size: 2.5rem;
+            font-weight: 700;
+        }
+
+        .app-header p {
+            color: var(--c-text-secondary);
+            margin-top: 8px;
+        }
+
         .back-link {
             display: inline-block;
             margin-top: 24px;
@@ -26,27 +64,121 @@
             text-decoration: none;
             font-weight: 500;
         }
+
         .back-link:hover {
             text-decoration: underline;
         }
 
-        .step { background-color: var(--c-surface); border-radius: var(--radius); box-shadow: var(--shadow); border: 1px solid var(--c-border); padding: 32px; margin-bottom: 32px; }
-        .step-title { font-size: 1.25rem; font-weight: 600; margin-bottom: 24px; }
-        .button { width: 100%; padding: 14px; font-size: 1rem; font-weight: 600; color: white; background-color: var(--c-primary); border: none; border-radius: 8px; cursor: pointer; transition: background-color 0.2s; margin-top: 16px; }
-        .button:hover { background-color: var(--c-primary-hover); }
-        .button:disabled { opacity: 0.5; cursor: not-allowed; }
-        textarea, input { width: 100%; padding: 12px 16px; background-color: var(--c-bg); border: 1px solid var(--c-border); border-radius: 8px; font-size: 1rem; color: var(--c-text-primary); }
-        .input-group { display: grid; grid-template-columns: 1fr 1fr; gap: 16px; }
-        label { display: block; margin-bottom: 8px; font-weight: 500; font-size: 0.9rem; color: var(--c-text-secondary); }
-        .auth-status { padding: 8px 16px; border-radius: 8px; font-weight: 500; text-align: center; }
-        .auth-connected { background-color: var(--c-success-bg); color: var(--c-success); border: 1px solid var(--c-success); }
-        .auth-disconnected { background-color: var(--c-error-bg); color: var(--c-error); border: 1px solid var(--c-error); }
-        .spinner { margin: 24px auto; width: 40px; height: 40px; border: 4px solid var(--c-border); border-top-color: var(--c-primary); border-radius: 50%; animation: spin 1s linear infinite; }
-        .hidden { display: none; }
-        @keyframes spin { to { transform: rotate(360deg); } }
-        @media (max-width: 768px) { .input-group { grid-template-columns: 1fr; } }
+        .step {
+            background-color: var(--c-surface);
+            border-radius: var(--radius);
+            box-shadow: var(--shadow);
+            border: 1px solid var(--c-border);
+            padding: 32px;
+            margin-bottom: 32px;
+        }
+
+        .step-title {
+            font-size: 1.25rem;
+            font-weight: 600;
+            margin-bottom: 24px;
+        }
+
+        .button {
+            width: 100%;
+            padding: 14px;
+            font-size: 1rem;
+            font-weight: 600;
+            color: white;
+            background-color: var(--c-primary);
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: background-color 0.2s;
+            margin-top: 16px;
+        }
+
+        .button:hover {
+            background-color: var(--c-primary-hover);
+        }
+
+        .button:disabled {
+            opacity: 0.5;
+            cursor: not-allowed;
+        }
+
+        textarea,
+        input {
+            width: 100%;
+            padding: 12px 16px;
+            background-color: var(--c-bg);
+            border: 1px solid var(--c-border);
+            border-radius: 8px;
+            font-size: 1rem;
+            color: var(--c-text-primary);
+        }
+
+        .input-group {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 16px;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: 500;
+            font-size: 0.9rem;
+            color: var(--c-text-secondary);
+        }
+
+        .auth-status {
+            padding: 8px 16px;
+            border-radius: 8px;
+            font-weight: 500;
+            text-align: center;
+        }
+
+        .auth-connected {
+            background-color: var(--c-success-bg);
+            color: var(--c-success);
+            border: 1px solid var(--c-success);
+        }
+
+        .auth-disconnected {
+            background-color: var(--c-error-bg);
+            color: var(--c-error);
+            border: 1px solid var(--c-error);
+        }
+
+        .spinner {
+            margin: 24px auto;
+            width: 40px;
+            height: 40px;
+            border: 4px solid var(--c-border);
+            border-top-color: var(--c-primary);
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+        }
+
+        .hidden {
+            display: none;
+        }
+
+        @keyframes spin {
+            to {
+                transform: rotate(360deg);
+            }
+        }
+
+        @media (max-width: 768px) {
+            .input-group {
+                grid-template-columns: 1fr;
+            }
+        }
     </style>
 </head>
+
 <body>
     <div class="container">
         <header class="app-header">
@@ -63,18 +195,26 @@
             </section>
             <section class="step">
                 <div class="step-title">Langkah 2: Copy-Paste Jadwal dari BIMA</div>
-                <textarea id="scheduleInput" rows="8" placeholder="Paste semua jadwal mentah dari BIMA di sini..."></textarea>
+                <textarea id="scheduleInput" rows="8"
+                    placeholder="Paste semua jadwal mentah dari BIMA di sini..."></textarea>
                 <button id="btnParseSchedule" class="button">Proses Jadwal</button>
             </section>
             <section class="step hidden" id="stepStartDate">
                 <div class="step-title">Langkah 3: Atur & Sinkronkan</div>
                 <div class="input-group">
-                    <div><label for="startDate">Tanggal Mulai Semester</label><input type="date" id="startDate" required></div>
-                    <div><label for="weeksCount">Ulangi Selama (Minggu)</label><input type="number" id="weeksCount" value="14" min="1" max="20" required></div>
+                    <div><label for="startDate">Tanggal Mulai Semester</label><input type="date" id="startDate"
+                            required></div>
+                    <div><label for="weeksCount">Ulangi Selama (Minggu)</label><input type="number" id="weeksCount"
+                            value="14" min="1" max="20" required></div>
                 </div>
                 <button id="btnSyncToCalendar" class="button">Sinkronkan ke Google Calendar</button>
+                <button id="btnDownloadIcs" class="button"
+                    style="background-color: transparent; border: 2px solid var(--c-primary); color: var(--c-primary); margin-top: 12px;">Download
+                    File Jadwal (.ics)</button>
             </section>
-            <div id="loadingIndicator" class="hidden"><div class="spinner"></div></div>
+            <div id="loadingIndicator" class="hidden">
+                <div class="spinner"></div>
+            </div>
             <div id="resultContainer" class="hidden"></div>
             <div id="statusMessage" class="hidden"></div>
         </main>
@@ -121,24 +261,25 @@
         });
 
         btnConnectGoogle.onclick = async () => {
-            try { showLoading(true); const r = await fetch(`${API_BASE}/auth/google`), d = await r.json(); if(d.success) window.location.href = d.authUrl; else showStatus('Gagal membuat URL autentikasi', 'error'); } catch (e) { showStatus('Terjadi kesalahan', 'error'); } finally { showLoading(false); }
+            try { showLoading(true); const r = await fetch(`${API_BASE}/auth/google`), d = await r.json(); if (d.success) window.location.href = d.authUrl; else showStatus('Gagal membuat URL autentikasi', 'error'); } catch (e) { showStatus('Terjadi kesalahan', 'error'); } finally { showLoading(false); }
         };
         btnParseSchedule.onclick = async () => {
-            const rawText = scheduleInput.value.trim(); if(!rawText) return showStatus('Mohon masukkan jadwal', 'error');
-            try { showLoading(true); resultContainer.classList.add('hidden'); const r = await fetch(`${API_BASE}/parse-jadwal`, { method: 'POST', headers: {'Content-Type': 'application/json'}, body: JSON.stringify({rawText}) }), d = await r.json(); if(d.success) { parsedCourses = d.data; displayParsedCourses(d.data); stepStartDate.classList.remove('hidden'); showStatus(`Berhasil proses ${d.total} matkul`, 'success'); } else { showStatus(d.error, 'error'); } } catch (e) { showStatus('Terjadi kesalahan', 'error'); } finally { showLoading(false); }
+            const rawText = scheduleInput.value.trim(); if (!rawText) return showStatus('Mohon masukkan jadwal', 'error');
+            try { showLoading(true); resultContainer.classList.add('hidden'); const r = await fetch(`${API_BASE}/parse-jadwal`, { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ rawText }) }), d = await r.json(); if (d.success) { parsedCourses = d.data; displayParsedCourses(d.data); stepStartDate.classList.remove('hidden'); showStatus(`Berhasil proses ${d.total} matkul`, 'success'); } else { showStatus(d.error, 'error'); } } catch (e) { showStatus('Terjadi kesalahan', 'error'); } finally { showLoading(false); }
         };
         btnSyncToCalendar.onclick = async () => {
-            if(!sessionId) return showStatus('Hubungkan Google dulu', 'error'); if(parsedCourses.length === 0) return showStatus('Tidak ada jadwal', 'error'); const startDate = startDateInput.value, weeksCount = weeksCountInput.value; if(!startDate || !weeksCount) return showStatus('Isi tanggal dan minggu', 'error');
-            try { showLoading(true); const r = await fetch(`${API_BASE}/create-events`, { method: 'POST', headers: {'Content-Type': 'application/json'}, body: JSON.stringify({sessionId, courses: parsedCourses, startDate, weeksCount: parseInt(weeksCount)}) }), d = await r.json(); if(d.success) { displaySyncResults(d); showStatus(`Berhasil buat ${d.created} event`, 'success'); } else { if(r.status === 401){ sessionId = null; localStorage.removeItem('syncjadwal_session'); updateAuthStatus(false); showStatus('Sesi berakhir, hubungkan ulang', 'error'); } else { showStatus(d.error, 'error'); } } } catch (e) { showStatus('Terjadi kesalahan sinkronisasi', 'error'); } finally { showLoading(false); }
+            if (!sessionId) return showStatus('Hubungkan Google dulu', 'error'); if (parsedCourses.length === 0) return showStatus('Tidak ada jadwal', 'error'); const startDate = startDateInput.value, weeksCount = weeksCountInput.value; if (!startDate || !weeksCount) return showStatus('Isi tanggal dan minggu', 'error');
+            try { showLoading(true); const r = await fetch(`${API_BASE}/create-events`, { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ sessionId, courses: parsedCourses, startDate, weeksCount: parseInt(weeksCount) }) }), d = await r.json(); if (d.success) { displaySyncResults(d); showStatus(`Berhasil buat ${d.created} event`, 'success'); } else { if (r.status === 401) { sessionId = null; localStorage.removeItem('syncjadwal_session'); updateAuthStatus(false); showStatus('Sesi berakhir, hubungkan ulang', 'error'); } else { showStatus(d.error, 'error'); } } } catch (e) { showStatus('Terjadi kesalahan sinkronisasi', 'error'); } finally { showLoading(false); }
         };
-        
+
         function displayParsedCourses(courses) { resultContainer.innerHTML = `<div class="step"><div class="step-title">📚 Jadwal Diproses (${courses.length})</div> ${courses.map(c => `<div class="course-item" style="padding: 8px; border-bottom: 1px solid #eee;">${c.nama_matkul} (${c.kelas})</div>`).join('')}</div>`; resultContainer.classList.remove('hidden'); }
         function displaySyncResults(data) { resultContainer.innerHTML = `<div class="step"><div class="step-title">✅ Hasil Sinkronisasi</div><p><strong>Berhasil:</strong> ${data.created} event<br><strong>Gagal:</strong> ${data.failed} event</p></div>`; resultContainer.classList.remove('hidden'); }
-        async function checkAuthStatus() { try { const r = await fetch(`${API_BASE}/auth/status?sessionId=${sessionId}`), d = await r.json(); updateAuthStatus(d.authenticated); if(!d.authenticated){ sessionId = null; localStorage.removeItem('syncjadwal_session'); } } catch (e) {} }
+        async function checkAuthStatus() { try { const r = await fetch(`${API_BASE}/auth/status?sessionId=${sessionId}`), d = await r.json(); updateAuthStatus(d.authenticated); if (!d.authenticated) { sessionId = null; localStorage.removeItem('syncjadwal_session'); } } catch (e) { } }
         function updateAuthStatus(isConnected) { authStatus.textContent = isConnected ? '✅ Terhubung' : '❌ Belum Terhubung'; authStatus.className = `auth-status ${isConnected ? 'auth-connected' : 'auth-disconnected'}`; btnConnectGoogle.textContent = isConnected ? 'Hubungkan Ulang Akun' : 'Hubungkan dengan Google Calendar'; }
-        function showLoading(show) { loadingIndicator.classList.toggle('hidden', !show); if(show) resultContainer.classList.add('hidden'); btnParseSchedule.disabled = show; btnSyncToCalendar.disabled = show; btnConnectGoogle.disabled = show; }
+        function showLoading(show) { loadingIndicator.classList.toggle('hidden', !show); if (show) resultContainer.classList.add('hidden'); btnParseSchedule.disabled = show; btnSyncToCalendar.disabled = show; btnConnectGoogle.disabled = show; }
         function showStatus(message, type) { statusMessage.textContent = message; statusMessage.className = `auth-status ${type === 'success' ? 'auth-connected' : 'auth-disconnected'}`; statusMessage.classList.remove('hidden'); setTimeout(() => statusMessage.classList.add('hidden'), 5000); }
         function setDefaultStartDate() { const d = new Date(), offset = (d.getDay() + 6) % 7; d.setDate(d.getDate() - offset + 7); startDateInput.value = d.toISOString().split('T')[0]; }
     </script>
 </body>
+
 </html>
