--- a/frontend/privacy.html
+++ b/frontend/privacy.html
@@ -1,30 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="h43V0d6sye27ecNhiVMO5qKUhEQOlH2vgE_o7sP1e0s" />
     <title>Privacy Policy - BimCalendar</title>
+    <meta name="google-site-verification" content="h43V0d6sye27ecNhiVMO5qKUhEQOlH2vgE_o7sP1e0s" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <style>
-        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; line-height: 1.6; max-width: 800px; margin: 20px auto; padding: 0 20px; color: #333; }
-        .container { padding: 20px; border: 1px solid #ddd; border-radius: 8px; background-color: #f9f9f9; }
-        h1 { color: #111; }
+        .content-card {
+            background-color: var(--color-white);
+            border: 2px solid var(--color-black);
+            border-radius: var(--radius-lg);
+            padding: var(--spacing-xl);
+            max-width: 800px;
+            margin: var(--spacing-xl) auto;
+        }
+
+        .content-card h1 {
+            font-size: var(--font-size-3xl);
+            font-weight: 800;
+            margin-bottom: var(--spacing-md);
+            letter-spacing: -0.02em;
+        }
+
+        .content-card h2 {
+            font-size: var(--font-size-xl);
+            font-weight: 700;
+            margin-top: var(--spacing-xl);
+            margin-bottom: var(--spacing-md);
+        }
+
+        .content-card p {
+            margin-bottom: var(--spacing-md);
+            color: var(--color-gray-700);
+            line-height: 1.6;
+        }
+
+        .content-card strong {
+            color: var(--color-black);
+        }
     </style>
 </head>
+
 <body>
-    <div class="container">
-        <h1>Privacy Policy for BimCalendar</h1>
-        <p><strong>Last Updated:</strong> October 17, 2025</p>
-        <h2>1. Introduction</h2>
-        <p>Welcome to BimCalendar ("the Application"). This web application is designed to help students of UPN "Veteran" Yogyakarta synchronize their class schedules from the BIMA academic portal directly to their personal Google Calendar.</p>
-        <h2>2. Information We Access</h2>
-        <p>When you grant access, our Application interacts with your Google Account to use the following Google API Scope: <strong>https://www.googleapis.com/auth/calendar</strong>. This permission allows the Application to create new calendar events (your class schedules) on your primary Google Calendar.</p>
-        <h2>3. How We Use Your Information</h2>
-        <p>Your Google user data is used exclusively for creating calendar events based on the schedule data you provide. We do not read, store, share, or sell your data for any other purpose.</p>
-        <h2>4. Compliance with Google Policies</h2>
-        <p>BimCalendar's use and transfer of information received from Google APIs will adhere to the <a href="https://developers.google.com/terms/api-services-user-data-policy" target="_blank">Google API Services User Data Policy</a>, including the Limited Use requirements.</p>
-        <h2>5. Contact Us</h2>
-        <p>If you have any questions, please contact the developer at: <strong>tophvly1@gmail.com</strong></p>
+    <div class="sync-container">
+        <!-- Header -->
+        <header class="sync-header">
+            <div class="logo-section">
+                <h1 class="logo-title">BimCalendar</h1>
+                <p class="logo-subtitle">Sinkronisasi Jadwal Kuliah UPNVY</p>
+            </div>
+            <a href="index.html" class="back-link">← Kembali</a>
+        </header>
+
+        <!-- Privacy Content -->
+        <main class="content-card">
+            <h1>Privacy Policy</h1>
+            <p><strong>Terakhir Diperbarui:</strong> 21 Januari 2026</p>
+
+            <h2>1. Pendahuluan</h2>
+            <p>Selamat datang di BimCalendar. Aplikasi web ini dirancang untuk membantu mahasiswa UPN "Veteran"
+                Yogyakarta menyinkronkan jadwal kuliah mereka dari portal akademik BIMA langsung ke Google Calendar
+                pribadi mereka.</p>
+
+            <h2>2. Informasi yang Kami Akses</h2>
+            <p>Saat Anda memberikan akses, Aplikasi kami berinteraksi dengan Akun Google Anda menggunakan Scope API
+                Google berikut: <strong>https://www.googleapis.com/auth/calendar</strong>. Izin ini memungkinkan
+                Aplikasi untuk membuat acara kalender baru (jadwal kuliah Anda) di Google Calendar utama Anda.</p>
+
+            <h2>3. Bagaimana Kami Menggunakan Informasi Anda</h2>
+            <p>Data pengguna Google Anda digunakan secara eksklusif untuk membuat acara kalender berdasarkan data jadwal
+                yang Anda berikan. Kami tidak membaca, menyimpan, membagikan, atau menjual data Anda untuk tujuan lain
+                apa pun.</p>
+
+            <h2>4. Kepatuhan terhadap Kebijakan Google</h2>
+            <p>Penggunaan dan transfer informasi yang diterima dari API Google oleh BimCalendar akan mematuhi <a
+                    href="https://developers.google.com/terms/api-services-user-data-policy" target="_blank"
+                    style="color: var(--color-black); font-weight: 600;">Kebijakan Data Pengguna Layanan API Google</a>,
+                termasuk persyaratan Penggunaan Terbatas.</p>
+
+            <h2>5. Hubungi Kami</h2>
+            <p>Jika Anda memiliki pertanyaan, silakan hubungi pengembang di: <strong>tophvly1@gmail.com</strong></p>
+        </main>
+
+        <!-- Footer -->
+        <footer class="sync-footer">
+            <p>&copy; 2026 BimCalendar. Dibuat untuk memudahkan kita semua.</p>
+        </footer>
     </div>
 </body>
+
 </html>
