feat: add email

--- a/frontend/privacy.html
+++ b/frontend/privacy.html
@@ -84,7 +84,8 @@
                 termasuk persyaratan Penggunaan Terbatas.</p>
 
             <h2>5. Hubungi Kami</h2>
-            <p>Jika Anda memiliki pertanyaan, silakan hubungi pengembang di: <strong>tophvly1@gmail.com</strong></p>
+            <p>Jika Anda memiliki pertanyaan, silakan hubungi pengembang di:</p>
+            <strong>tophvly1@gmail.com / bintangramadhan0710@gmail.com</strong>
         </main>
 
         <!-- Footer -->
